# CatalystRSX

./: .env.example  Cargo.toml  LICENSE  README.md  index.scip
.github/workflows/: deps.yml
github.com/bwiglesworth/CatalystRSX/: README.md
migrations/: 20240101000000_create_users.sql  20250328063435_create_admin_user.sql
scip/: index.scip
src/: lib.rs  main.rs
src/auth/: admin.rs  guard.rs  mod.rs  password.rs  session.rs
src/config/: mod.rs  tls.rs
src/db/: encryption.rs  init_db.rs  mod.rs  pool.rs  query.rs
src/error/: mod.rs
src/logging/: audit.rs  mod.rs  security.rs
src/middleware/: csrf.rs  error.rs  mod.rs  security.rs  vhost.rs
src/models/: mod.rs  user.rs  vhost.rs
src/routes/: mod.rs
src/routing/: handlers.rs  mod.rs
src/security/: csrf.rs  mod.rs
src/security/headers/: csp.rs  expect_ct.rs  feature.rs  frame_options.rs  mod.rs  referrer.rs
src/security/jwt/: claims.rs  mod.rs
src/security/password/: expiration.rs  history.rs  manager.rs  mod.rs  policy.rs
src/security/xss/: mod.rs  sanitize.rs
src/templates/: 400.html  401.html  403.html  404.html  500.html  layout.rs
src/templates/pages/: dashboard.rs  index.rs  layout.rs  mod.rs
src/templates/pages/admin/: dashboard.rs  layout.rs  login.rs
src/tests/: audit_test.rs  cache_test.rs  cfrs_test.rs  db_test.rs  encryption_test.rs  error_test.rs  guard_test.rs  headers_test.rs  http_method_test.rs  mod.rs  password_test.rs  pool_test.rs  query_test.rs  rate_limit_test.rs  security_log_test.rs  server_test.rs  session_test.rs  tls_tests.rs  validation_test.rs  xss_test.rs
src/validation/: mod.rs
static/: index.html
static/css/: main.css  tailwind.css
static/js/: app.js
