[package]
name = "catalyst_rsx"
version = "0.1.0"
authors = ["bwiglesworth"]
edition = "2024"
homepage = "https://github.com/bwiglesworth/catalyst_rsx"
repository = "https://github.com/bwiglesworth/catalyst_rsx"
description = "Catalyst RSX is a comprehensive full-stack framework for building server-side rendered components like a React App in Rust."
license = "MIT"

[dependencies]
# Web framework
actix-web = { version = "4.3", features = ["macros", "openssl"] }
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5"
actix-governor = "0.4"
thiserror = "1.0"
futures = "0.3"
dioxus = "0.4"
dioxus-ssr = "0.4"
rand = "0.8"
once_cell = "1.18"
argon2 = "0.5.2"


# TLS/SSL
openssl = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"

# Logging and configuration
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
config = "0.13"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# MariaDB 
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10.3"
base64 = "0.21.5"
chrono = "0.4"